--- a/examples/index.html
+++ b/examples/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <title>lwt-axios-demo</title>
     <link rel="stylesheet" href="global.css">
+    <style>
+      .box{
+        padding: 30px 150px;
+        text-align: center;
+      }
+      .box-ul{
+        font-size: 30px;
+      }
+    </style>
 </head>
 <body style="padding: 0 20px">
-  <h1>老黑的 AXIOS DEMO</h1>
-  <ul>
-    <li><a href="simple/index.html">Simple</a></li>
-  </ul>
+  <div class="box">
+    <h1>老黑的 AXIOS DEMO</h1>
+    <ul class="box-ul">
+      <li><a href="simple/index.html">Simple</a></li>
+      <li><a href="base/index.html">base</a></li>
+    </ul>
+  </div>
 </body>
 </html>
