--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,7 @@
     <ul class="box-ul">
       <li><a href="simple/index.html">Simple</a></li>
       <li><a href="base/index.html">base</a></li>
+      <li><a href="error/index.html">error</a></li>
     </ul>
   </div>
 </body>
