--- a/examples/index.html
+++ b/examples/index.html
@@ -21,6 +21,7 @@
       <li><a href="simple/index.html">Simple</a></li>
       <li><a href="base/index.html">base</a></li>
       <li><a href="error/index.html">error</a></li>
+      <li><a href="extend/index.html">extend</a></li>
     </ul>
   </div>
 </body>
