--- a/examples/index.html
+++ b/examples/index.html
@@ -22,6 +22,7 @@
       <li><a href="base/index.html">base</a></li>
       <li><a href="error/index.html">error</a></li>
       <li><a href="extend/index.html">extend</a></li>
+      <li><a href="interceptor/index.html">interceptor</a></li>
     </ul>
   </div>
 </body>
