--- a/examples/index.html
+++ b/examples/index.html
@@ -20,9 +20,10 @@
     <ul class="box-ul">
       <li><a href="simple/index.html">Simple</a></li>
       <li><a href="base/index.html">base</a></li>
-      <li><a href="error/index.html">error</a></li>
-      <li><a href="extend/index.html">extend</a></li>
-      <li><a href="interceptor/index.html">interceptor</a></li>
+      <li><a href="error/index.html">error 异常处理</a></li>
+      <li><a href="extend/index.html">extend 接口方法 API 扩展</a></li>
+      <li><a href="interceptor/index.html">interceptor拦截器</a></li>
+      <li><a href="config/index.html">config配置合并</a></li>
     </ul>
   </div>
 </body>
