feat(Cancel 类的实现、withCredentials、xsrf防御):
Cancel 类的实现和额外逻辑的编写和demo验证。 withCredentials 跨域请求携带 cookie 的配置。xsrf防御的实现和demo验证。

--- a/examples/index.html
+++ b/examples/index.html
@@ -24,6 +24,8 @@
       <li><a href="extend/index.html">extend 接口方法 API 扩展</a></li>
       <li><a href="interceptor/index.html">interceptor拦截器</a></li>
       <li><a href="config/index.html">config配置合并</a></li>
+      <li><a href="cancel/index.html">Cancle 取消请求</a></li>
+      <li><a href="more/index.html">more</a></li>
     </ul>
   </div>
 </body>
